Added ragu and pizza recipe

--- a/recipes/carbonara.html
+++ b/recipes/carbonara.html
@@ -1,42 +1,67 @@
-<h1>Spaghetti alla Carbonara</h1>
-<img src="../images/carbonara.jpeg" alt="Spaghetti alla Carbonara">
-<h2>Ingredients</h2>
-<ul>
-	<li>500g of spaghetti</li>
-	<li>2l of water</li>
-	<li>8g of salt</li>
-	<li>200g of guanciale (or cured bacon)</li>
-	<li>4 egg yolks</li>
-	<li>30g of parmesan</li>
-	<li>20g of pecorino</li>
-	<li>Black pepper</li>
-</ul>
+<head>
+	<title>Spaghetti alla Carbonara</title>
+</head>
+<body>
+	<h1>Spaghetti alla Carbonara</h1>
+	<img src="../images/carbonara.jpeg" alt="Spaghetti alla Carbonara" height=300 />
+	<h2>Description</h2>
+	<p>
+		This Carbonara recipe is presented by Luciano Monosilio (<a
+			href="https://www.youtube.com/watch?v=c86H7KTxTzo&list=FLt996nxzEEBaW3dxRKKEreQ"
+			target="_blank"
+			rel="noopener noreferrer"
+			>Youtube</a
+		>). It features a classic combination of Pecorino cheese, Parmesan cheese,
+		black pepper, eggs, guanciale from Amatrice, and Spaghettoni Monograno
+		Felicetti. The dish is creamy and rich, showcasing the authentic flavors of
+		Italian cuisine.
+	</p>
 
-<h2>Instructions</h2>
-<ol>
-	<li>
-		We chop the bacon into thick cubes and put it in a pan (no added fat). We
-		leave it on low heat until it is crispy on the outside and tender on the
-		inside. At that time, we drain the fat and reserve.
-	</li>
-	<li>
-		We put the water on the fire with the salt. When it boils, we add the
-		spaghetti and leave them for the time indicated by the manufacturer. About
-		eight minutes.
-	</li>
-	<li>
-		Meanwhile, in a bowl we mix, with the help of the rods, the egg yolks, the
-		grated cheeses and a little pepper. When the pasta is almost ready, we add a
-		little cooking water and beat well.
-	</li>
-	<li>
-		When the pasta is ready, we pour it into the bowl, draining it previously. A
-		good way is to use long tongs for the whole process. We add the guancale, a
-		little more pepper and some of the bacon fat. We mix well and serve
-		immediately.
-	</li>
-</ol>
+	<h2>Ingredients</h2>
+	<ul>
+		<li>100g Pecorino cheese, grated</li>
+		<li>100g Parmesan cheese, grated</li>
+		<li>Black pepper in grains, freshly ground</li>
+		<li>4 eggs (yolks only)</li>
+		<li>150g guanciale, diced</li>
+		<li>320g Spaghettoni Monograno Felicetti</li>
+		<li>Salt, to taste</li>
+	</ul>
+	<h2>Instructions</h2>
+	<ol>
+		<li>Separate the egg yolks from the egg whites.</li>
+		<li>
+			In a bowl, combine the egg yolks, Pecorino cheese, Parmesan cheese, and a
+			generous amount of freshly ground black pepper. Whisk vigorously until
+			well combined.
+		</li>
+		<li>
+			In a nonstick skillet, brown the diced guanciale over medium heat until
+			the fat is rendered and the guanciale is crisp on the outside but still
+			creamy inside. Strain and reserve the fat.
+		</li>
+		<li>
+			Bring a pot of salted water to a boil and cook the Spaghettoni for 13
+			minutes or until al dente. Drain the pasta, reserving some of the cooking
+			water.
+		</li>
+		<li>
+			Return the pasta to the pot over low heat. Add the egg and cheese mixture,
+			stirring quickly to create a creamy sauce without scrambling the eggs. Add
+			a little reserved pasta water if needed to achieve the desired
+			consistency.
+		</li>
+		<li>
+			Stir in the cooked guanciale and some of the reserved guanciale fat. Mix
+			well to combine.
+		</li>
+		<li>
+			Serve the Carbonara immediately, topped with additional cheese and freshly
+			ground black pepper.
+		</li>
+	</ol>
 
-<p>Preparation time: 20 minutes</p>
-<p>Cooking time: 8 minutes</p>
-<p>Number of guests: 4</p>
+	<p>Preparation time: 20 minutes</p>
+	<p>Cooking time: 20 minutes</p>
+	<p>Number of guests: 4</p>
+</body>
