--- a/index.html
+++ b/index.html
@@ -5,5 +5,7 @@
 	<h1>Odin Recipes</h1>
 	<ul>
 		<li><a href="./recipes/carbonara.html">Spaghetti alla Carbonara</a></li>
+		<li><a href="./recipes/pizza.html">Pizza Dough</a></li>
+		<li><a href="./recipes/ragu.html">Authentic Ragù alla Bolognese</a></li>
 	</ul>
 </body>
