--- a/recipes/ragu.html
+++ b/recipes/ragu.html
@@ -17,12 +17,14 @@
 		<h2>Description</h2>
 		<p>
 			This is the official updated recipe for Ragù alla Bolognese (<a
-			href="https://www.bo.camcom.gov.it/sites/default/files/comunicazione/comunicati/2023/comunicato%20stampa%20deposito%20rinnovata%20ricetta%20vero%20Rag%C3%B9%20alla%20bolognese%2020%20aprile%202023.pdf"
-			target="_blank" rel="noopener noreferrer" >PDF</a>), as deposited by the
-			Accademia Italiana della Cucina at the Chamber of Commerce of Bologna on
-			April 20, 2023. The recipe reflects extensive research and aims to
-			preserve the traditional flavors while acknowledging modern improvements
-			in ingredients and cooking techniques.
+				href="https://www.bo.camcom.gov.it/sites/default/files/comunicazione/comunicati/2023/comunicato%20stampa%20deposito%20rinnovata%20ricetta%20vero%20Rag%C3%B9%20alla%20bolognese%2020%20aprile%202023.pdf"
+				target="_blank"
+				rel="noopener noreferrer"
+				>PDF</a
+			>), as deposited by the Accademia Italiana della Cucina at the Chamber of
+			Commerce of Bologna on April 20, 2023. The recipe reflects extensive
+			research and aims to preserve the traditional flavors while acknowledging
+			modern improvements in ingredients and cooking techniques.
 		</p>
 
 		<h2>Ingredients</h2>
