--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <head>
 	<link rel="stylesheet" href="chatgptstyle.css" />
-	<title>Odin Recipes</title>
+	<title>Recipes</title>
 </head>
 <body>
-	<h1>Odin Recipes</h1>
+	<h1>Recipes</h1>
 	<ul>
 		<li><a href="./recipes/carbonara.html">Spaghetti alla Carbonara</a></li>
 		<li><a href="./recipes/pizza.html">Pizza Dough</a></li>
