--- a/recipes/ragu.html
+++ b/recipes/ragu.html
@@ -4,13 +4,13 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="../chatgptstyle.css" />
-		<title>Authentic Ragù alla Bolognese</title>
+		<title>Ragù alla Bolognese</title>
 	</head>
 	<body>
-		<h1>Authentic Ragù alla Bolognese</h1>
+		<h1>Ragù alla Bolognese</h1>
 		<img
 			src="../images/ragu.jpg"
-			alt="Authentic Ragù alla Bolognese"
+			alt="Ragù alla Bolognese"
 			height="300"
 		/>
 
