--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<h1>Recipes</h1>
 	<ul>
 		<li><a href="./recipes/carbonara.html">Spaghetti alla Carbonara</a></li>
-		<li><a href="./recipes/pizza.html">Pizza Dough</a></li>
+		<li><a href="./recipes/pizza.html">Pizza</a></li>
 		<li><a href="./recipes/ragu.html">Ragù alla Bolognese</a></li>
 	</ul>
 </body>
