--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -1,9 +1,9 @@
 <head>
 	<link rel="stylesheet" href="../chatgptstyle.css" />
-	<title>Pizza Dough</title>
+	<title>Pizza</title>
 </head>
 <body>
-	<h1>Pizza Dough</h1>
+	<h1>Pizza</h1>
 	<img src="../images/pizza.jpg" alt="Neapolitan pizza" height=300 />
 	<h2>Description</h2>
 	<p>
